// hero/hero.proto
syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package coupon;

service CouponGrpcController {
  rpc registerCoupon (RegisterCoupon) returns (OkResponse) {}
  rpc getCoupons (GetCouopns) returns (GetCouponResponse) {}
  rpc updateCoupon (UpdateCoupon) returns (OkResponse) {}
  rpc issueCoupon (IssueCoupon) returns (OkResponse) {}
  rpc useCoupon (UseCoupon) returns (OkResponse) {}
  rpc cancleCoupon (CancleCoupon) returns (OkResponse) {}
}

//// dto (request)
message RegisterCoupon {
  google.protobuf.Timestamp couponActiveStartDate = 1;
  google.protobuf.Timestamp couponActiveEndDate = 2;
  DISCOUNT_TYPE discountType  = 3;
  int32 discountValue = 4;
  int32 issueLimit = 5;
}

message GetCouopns {
  int32 page = 1;
  int32 size = 2;
  string issuerUuid = 3;
  google.protobuf.Timestamp  requestDate = 4;
}

message UpdateCoupon {
  string couopnUuid = 1;
  google.protobuf.Timestamp couponActiveStartDate = 2;
  google.protobuf.Timestamp couponActiveEndDate = 3;
  DISCOUNT_TYPE discountType  = 4;
  int32 discountValue = 5;
  int32 issueLimit = 6;
}

message IssueCoupon {
  string couponUuid = 1;
  string issuerUuid = 2;
  google.protobuf.Timestamp couponIssuedStartDate = 3;
}

message UseCoupon {
  string couponUuid = 1;
  string productUuid = 2;
  string issuerUuid = 3;
  google.protobuf.Timestamp useRequestDate = 4;
}

message CancleCoupon {
  string couponUuid = 1;
  string issuerUuid = 2;
}


////  dto (response)
message GetCouponResponse  {
  string statusCode = 1;
  string message = 2;
  repeated Coupon data = 3;
}

message OkResponse {
  string statusCode = 1;
  string message = 2;
}

//enum | object
enum DISCOUNT_TYPE{
  RATE = 0;
  AMOUNT = 1;
}

message Coupon  {
  int32 issueLimit = 1;
  DISCOUNT_TYPE discountType = 2;
  int32 discountValue = 3;
  google.protobuf.Timestamp  couponActiveStartDate = 4;
  google.protobuf.Timestamp  couponActiveEndDate = 5;
  string couponId = 6;
  string couponUuid = 7;
}